--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 alembic==0.7.4
 blinker==1.3
+ecdsa==0.13
+Fabric==1.10.1
 Flask==0.10.1
 Flask-Login==0.2.11
 Flask-Mail==0.9.1
@@ -13,7 +15,9 @@ itsdangerous==0.24
 Jinja2==2.7.3
 Mako==1.0.1
 MarkupSafe==0.23
+paramiko==1.15.2
 passlib==1.6.2
+pycrypto==2.6.1
 SQLAlchemy==0.9.9
 Werkzeug==0.10.1
 WTForms==2.0.2
